--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,18 +8,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: 16
 
     steps:
       - name: 开始运行
         uses: actions/checkout@v1
 
-      - name: 设置 Node.js ${{ matrix.node-version }}
+      - name: 设置 Node.js 16
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '16'
 
       - name: 安装 Hexo CI
         run: 
