--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.x]
+        node-version: [18]
 
     steps:
       - name: 開始運行
-        uses: actions/checkout@v1
+        uses: actions/checkout@main
 
       - name: 設置 Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@main
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -27,7 +27,7 @@ jobs:
           npm install hexo-cli -g
 
       - name: 緩存
-        uses: actions/cache@v1
+        uses: actions/cache@main
         id: cache-dependencies
         with:
           path: node_modules
