--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,4 @@ jobs:
           git config user.email "${{secrets.GIT_EMAIL}}"
           git add .
           git commit -m "Update"
-          git push --force --quiet "${{secrets.GH_TOKEN}}@${{secrets.GH_REF}}" main:main
+          git push --force --quiet "${{secrets.GH_REF}}" main:main
