--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,11 +40,4 @@ jobs:
 
       - name: 部署博客
         run: |
-          hexo clean && hexo g
-          cd ./public
-          git init
-          git config user.name "${{secrets.GIT_NAME}}"
-          git config user.email "${{secrets.GIT_EMAIL}}"
-          git add .
-          git commit -m "Update"
-          git push --force --quiet "${{secrets.GH_REF}}" master:main
+          hexo clean && hexo g && hexo d
